--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Matthew Warren</title>
 </head>
 <body>
-    <h1>Matthew's Website</h1>
+    <h1>matthew.warren@tamu ~ %</h1>
+    <div><par>This is some cool info about me</par></div>
+
+    <div><a href="/aigen.html">Qualifications</a>
+    <div><a href="/technical.html">Technical</a>
+    <div><a href="/qualifications.html">Service</a>
+    <div><a href="/aigen.html">AI</a>
+
+</div>
+    
 </body>
 </html>
