--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <h1>matthew.warren@tamu ~ %</h1>
     <div><par>This is some cool info about me</par></div>
 
-    <div><a href="/aigen.html">Qualifications</a>
-    <div><a href="/technical.html">Technical</a>
-    <div><a href="/qualifications.html">Service</a>
-    <div><a href="/aigen.html">AI</a>
+    <div>
+        <div><a href="/qualifications.html">Qualifications</a>
+        <div><a href="/portfolio.html">Portfolio</a>
+        <div><a href="/service.html">Service</a>
+        <div><a href="/genai.html">AI</a>
+    </div>
+    
+    <div><img src="matthew_portrait.jpg" style="height: 40vh; width: auto;"></div>
 
 </div>
     
