--- a/service.html
+++ b/service.html
@@ -6,6 +6,24 @@
     <title>Service</title>
 </head>
 <body>
-    
+    <div><h1>Service</h1></div>
+
+    <div>   
+        <h2>Service Activities: </h2>
+        <div>
+            <h3>Freshman Leaders in New Technology: Union Committee</h3>
+            <ul>
+                <li>
+                    <strong>Community Service:</strong> Planned community service events and fundraisers in the College Station area. Coordinated
+                    with Texas Ramp Project and Big Event to serve local area.
+                </li>
+                <li>
+                    <strong>PET Plastic to 3D Fillament Recycler:</strong> Designed and assembled a PET plastic-to-filament converter to recycle
+                    water bottles.
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 </html>
