--- a/qualifications.html
+++ b/qualifications.html
@@ -6,6 +6,57 @@
     <title>Qualifications</title>
 </head>
 <body>
-    
+    <div><h1>Qualifications</h1></div>
+
+    <div>   
+        <h2>Resume: </h2>
+         <div><iframe src="https://drive.google.com/file/d/1KLOzqgrskQOEhPASgtqB_LNeBw743Xz-/preview" width="640" height="480" allow="autoplay"></iframe></div>
+    </div>
+
+    <div>   
+        <h2>Skills: </h2>
+        <div>
+            <h3>Languages:</h3>
+            <p>These are programming languages I'm proficient in.</p>
+            <div>
+                <ul>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>C++</li>
+                    <li>Javascript</li>
+                    <li>Bash</li>
+                    <li>ARM/LEGv8 Assembly</li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <h3>Software</h3>
+            <p>These are software libraries that I have in-depth experience with.</p>
+            <div>
+                <ul>
+                    <li>GStreamer</li>
+                    <li>FFMPEG</li>
+                    <li>Debian Live Build</li>
+                    <li>RHEL</li>
+                    <li>Google Pub/Sub</li>
+                    <li>Tesseract OCR</li>
+                    <li>OSTree</li>
+                    <li>GRUB boot manager</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div>   
+        <h2>Areas of Interest: </h2>
+        <div>
+            <ul>
+                <li>Operating System Design</li>
+                <li>Video Processing Pipelines</li>
+                <li>Linux System Administration</li>
+                <li>Building Software Support for ARM64</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
