--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>matthew.warren@tamu ~ %</h1>
-    <div><par>This is some cool info about me</par></div>
+    <div><par>Howdy, I'm Matthew Warren, I'm proud to be a Junior Computer Engineering Major at TAMU! Welcome to my neat website.</par></div>
+
+     <div><img src="matthew_portrait.jpg" style="height: 40vh; width: auto;"></div>
 
     <div>
         <div><a href="/qualifications.html">Qualifications</a>
@@ -15,10 +17,5 @@
         <div><a href="/service.html">Service</a>
         <div><a href="/genai.html">AI</a>
     </div>
-    
-    <div><img src="matthew_portrait.jpg" style="height: 40vh; width: auto;"></div>
-
-</div>
-    
 </body>
 </html>
