fix index links

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
      <div><img src="matthew_portrait.jpg" style="height: 40vh; width: auto;"></div>
 
     <div>
-        <div><a href="/qualifications.html">Qualifications</a>
-        <div><a href="/portfolio.html">Portfolio</a>
-        <div><a href="/service.html">Service</a>
-        <div><a href="/genai.html">AI</a>
+        <div><a href="./qualifications.html">Qualifications</a>
+        <div><a href="./portfolio.html">Portfolio</a>
+        <div><a href="./service.html">Service</a>
+        <div><a href="./genai.html">AI</a>
     </div>
 </body>
 </html>
