--- a/qualifications.html
+++ b/qualifications.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_dark.css">
+    <link id="theme-style" rel="stylesheet" href="style_dark.css">
     <title>Qualifications</title>
 </head>
 <body>
