--- a/service.html
+++ b/service.html
@@ -12,7 +12,7 @@
         <div class="header-links">
             <a href="./index.html">Home</a>
             <a href="./qualifications.html">Qualifications</a>
-            <a href="./service.html">Service</a>
+            <a href="./portfolio.html">Portfolio</a>
             <a href="./genai.html">GenAI</a>
             <button 
             class="theme-toggle" 
