add external links

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,9 @@
             <div class="activity-container">
                 <div class="activity-image-container">
                     <img class="activity-image" src="resi_mini.png">
-                    <p class="activity-image-caption">Resi Low Cost Encoder</p>
+                    <a href="https://resi.io/hardware/mini/" style="text-decoration: none;">
+                        <p class="activity-image-caption">Resi Low Cost Encoder</p>
+                    </a>
                 </div>
                 <div class="activity-text-container">
                     <div class="activity-text">
@@ -57,12 +59,14 @@
             <div class="activity-container">
                 <div class="activity-image-container">
                     <img class="activity-image" src="CentOS-to-Deb.png">
-                    <p class="activity-image-caption">Resi OS Migration</p>
+                    <a href="https://www.debian.org/devel/debian-live/" style="text-decoration: none;">
+                        <p class="activity-image-caption">Resi OS Migration</p>
+                    </a>
                 </div>
                 <div class="activity-text-container">
                     <div class="activity-text">
                         <p>
-                            To replace CentOS 7, which was being used by Resi Media's x86 encoders, I created a custom and lightweight distribution of Debian 12, fine-tuned for video encoding/decoding, using Debian's live-build tool. I implemented git-like version control on this OS, using OSTree for seamless deployment of updates. I also developed and implemented a live-migration tool for porting systems from CentOS 7 to Debian 12 without any user interaction.
+                            To replace CentOS7, which was being used by Resi Media's x86 encoders, I created a custom and lightweight distribution of Debian 12, fine-tuned for video encoding/decoding, using Debian's live-build tool. I implemented git-like version control on this OS, using OSTree for seamless deployment of updates. I also developed and implemented a live-migration tool for porting systems from CentOS 7 to Debian 12 without any user interaction.
                         </p>
                         <p>
                             The OS Live migration replaces the old system while allowing a rollback until the new OS is operational. The first step is allocating space on a device to write the new operating system. Next, the bootloader is updated to recognize the new OS installation and boot into it. The new OS is built with a slew of tests that verify an operational system and only deletes the old system once they are complete.
@@ -75,7 +79,9 @@
             <div class="activity-container">
                 <div class="activity-image-container">
                     <img class="activity-image" src="incident-resolution.png">
-                    <p class="activity-image-caption">Hardware Incident Resolution Platform</p>
+                     <a href="https://www.redhat.com/en/topics/linux/centos-linux-eol" style="text-decoration: none;">
+                        <p class="activity-image-caption">Hardware Incident Resolution Platform</p>
+                     </a>
                 </div>
                 <div class="activity-text-container">
                     <div class="activity-text">
