--- a/qualifications.html
+++ b/qualifications.html
@@ -69,14 +69,14 @@
                                 <div class="triangle-heading"></div>
                             </div>
                             <ul class ="card-list">
-                                <li>GStreamer</li>
-                                <li>FFMPEG</li>
-                                <li>Debian Live Build</li>
-                                <li>RHEL</li>
-                                <li>Google Pub/Sub</li>
-                                <li>Tesseract OCR</li>
-                                <li>OSTree</li>
-                                <li>GRUB boot manager</li>
+                                <li><a href="https://www.redhat.com/en/topics/linux/centos-linux-eol" style="text-decoration: none; color: inherit;">GStreamer</a></li>
+                                <li><a href="https://ffmpeg.org/" style="text-decoration: none; color: inherit;">FFMPEG</a></li>
+                                <li><a href="https://www.debian.org/devel/debian-live/" style="text-decoration: none; color: inherit;">Debian Live Build</a></li>
+                                <li><a href="https://www.redhat.com/en/technologies/linux-platforms/enterprise-linux" style="text-decoration: none; color: inherit;">RHEL</a></li>
+                                <li><a href="https://cloud.google.com/pubsub/docs/overview" style="text-decoration: none; color: inherit;">Google Pub/Sub</a></li>
+                                <li><a href="https://github.com/tesseract-ocr/tesseract" style="text-decoration: none; color: inherit;">Tesseract OCR</a></li>
+                                <li><a href="https://ostreedev.github.io/ostree/introduction/" style="text-decoration: none; color: inherit;">OSTree</a></li>
+                                <li><a href="https://www.gnu.org/software/grub/" style="text-decoration: none; color: inherit;">GNU GRUB</a></li>
                             </ul>
                     <div class="carousel__snapper"></div>
                     <a href="#carousel__slide1"
