--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Service</title>
     <link id="theme-style" rel="stylesheet" href="style_dark.css">
 </head>
 <body>
@@ -36,7 +36,9 @@
             <div class="activity-container">
                 <div class="activity-image-container">
                     <img class="activity-image" src="placeholder-1024x1024.png">
-                    <p class="activity-image-caption">Union Service Committee</p>
+                    <a href="https://tamuflint.org/public/index.html#:~:text=FLINT%20(Freshman%20Leaders%20in%20New,skilled%20leaders%20of%20the%20future." style="text-decoration: none;">
+                        <p class="activity-image-caption">Union Service Committee</p>
+                    </a>
                 </div>
                 <div class="activity-text-container">
                     <div class="activity-text">
