add service images

--- a/service.html
+++ b/service.html
@@ -35,7 +35,7 @@
         <section class="activity-containers">
             <div class="activity-container">
                 <div class="activity-image-container">
-                    <img class="activity-image" src="placeholder-1024x1024.png">
+                    <img class="activity-image" src="logo.png">
                     <a href="https://tamuflint.org/public/index.html#:~:text=FLINT%20(Freshman%20Leaders%20in%20New,skilled%20leaders%20of%20the%20future." style="text-decoration: none;">
                         <p class="activity-image-caption">Union Service Committee</p>
                     </a>
@@ -52,7 +52,7 @@
 
             <div class="activity-container">
                 <div class="activity-image-container">
-                    <img class="activity-image" src="placeholder-1024x1024.png">
+                    <img class="activity-image" src="fillament-extruder.png">
                     <p class="activity-image-caption">Bottle to Fillament Converter</p>
                 </div>
                 <div class="activity-text-container">
